--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9497,7 +9497,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20210212083513860" list="[[Books / livres]] Home" modified="20210212083513860" title="$:/StoryList">
+<div created="20210312201334531" list="[[online services, addons &amp; resources]] Home" modified="20210312201334531" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9557,8 +9557,8 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20210212083512099" title="$:/temp/search">
-<pre>books</pre>
+<div created="20190114084246125" modified="20210312201333409" title="$:/temp/search">
+<pre>resources</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9904,8 +9904,9 @@ CECI EST UNE ALERTE BLAGUE NULLE DE NIVEAU 8. IL NE S'AGIT PAS D'UN EXERCICE.
 DIRIGEZ VOUS DANS LE CALME VERS LA SORTIE LA PLUS PROCHE.
 </pre>
 </div>
-<div created="20190131165226977" modified="20210212083606953" tags="download core" title="Books / livres">
-<pre>* ''La ponérologie politique - Andrew Lobaczewski''
+<div created="20190131165226977" modified="20210308142827108" tags="download core" title="Books / livres">
+<pre>* ''I Am a Strange Loop - Douglas Hofstadter'' https://en.wikipedia.org/wiki/I_Am_a_Strange_Loop
+* ''Andrew Lobaczewski - La ponérologie politique - étude de la genèse du mal, appliqué à des fins politiques''
 * ''éloge de la fuite - Laborit''
 * John Mandel - Station Eleven (post-apo)
 * Gustave Lebon - la psychologie des foules
@@ -9920,6 +9921,16 @@ DIRIGEZ VOUS DANS LE CALME VERS LA SORTIE LA PLUS PROCHE.
 * Hommage à la Catalogne -  George Orwell
 * The Prince of Tides / Le Prince des marées - Pat Conroy
 
+! Michael Vincent
+* The Godfather by Mario Puzo
+* The Ultimate Secrets of Self Confidence by Dr Robert Anthony
+* ''Zen in The Martial Arts by Joe Hyms''
+* The Autobiography of Malcolm X by Alex Haley
+* Casino Royale by Ian FlemIng 
+* Know The Truth by @gordanabiernat
+* A Man’s Search for Meaning by Viktor Frankle
+* The Five Love Languages by Gary Chapman
+* Talk Like TED by @carminegallo
 ! Spidey
 * Paul Eckman emotions revealed (face reading recommanded by Spidey)
 * Robert Cialdini - Influence, The Psychology of Persuasion
@@ -11720,7 +11731,7 @@ http://www.celestialheavens.com/viewpage.php?id=24
 * Individual Computer Players won't hire heroes is they already have six or more.
 * Computer Players as a whole will not hire Heroes if they have 20 or more among them. </pre>
 </div>
-<div created="20190108105358377" modified="20201203164819454" tags="core" title="Home">
+<div created="20190108105358377" modified="20210215204629020" tags="core" title="Home">
 <pre>* [[Tugan TODO]]
 * ''&gt;&gt;&gt;'' [[pointeur current TODO]]
 * ''&gt;&gt;&gt;'' [[todo DL]]
@@ -13589,7 +13600,7 @@ Nutrition Optimale / méthode ROP Fabien Delcourt / fini les régimes Emmanuel F
 ```
 </pre>
 </div>
-<div created="20190322150105505" modified="20210211083916696" tags="improve core" title="online services, addons &amp; resources">
+<div created="20190322150105505" modified="20210312201349275" tags="improve core" title="online services, addons &amp; resources">
 <pre>! sub
 * https://www.sous-titres.eu/
 * https://www.opensubtitles.org/fr/search/subs
@@ -13599,12 +13610,23 @@ Nutrition Optimale / méthode ROP Fabien Delcourt / fini les régimes Emmanuel F
 
 ! downloaders
 * scribd : https://docdownloader.com/ https://dlscrib.com
-* nitroflare :  https://leechpremium.link/index.php  https://cocoleech.com/  https://www.leechlisting.com/ http://leech.alemdarleech.com/
 * YT : pwnyoutube 9xbuddy.org
 * fb video : www.getfvid.com https://fbdown.net/ https://fr.savefrom.net/9-how-to-download-facebook-video.html https://fbdownloader.net/
+* fb private videos : https://downloadfacebook.net/fr/facebook-private-video-downloader.html
+
+! leechers
+* https://leechall.com/
+* nitroflare :  https://leechpremium.link/index.php  
+* https://cocoleech.com/  
+* https://www.leechlisting.com/ 
+* http://leech.alemdarleech.com/
+* https://ddebrid.com/
+* https://www.deepbrid.com/service
 
 ! pdf libraries
 * ''https://kupdf.net/''
+* https://1lib.fr
+* https://libgen.fun
 * ''https://b-ok.cc/''
 * ''https://z-lib.org/''
 * https://dokumen.tips
@@ -13621,11 +13643,19 @@ Nutrition Optimale / méthode ROP Fabien Delcourt / fini les régimes Emmanuel F
 * 2epub : https://ebook.online-convert.com/fr/convertir-en-epub
 * online reader : https://www.ofoct.com/viewer/epub-reader-online.html
 
+! torrents
+* https://bt4g.org/
+* https://ibit.to
+* https://rutracker.org
+* https://torrentmag.net
+* http://torrentinvites.org/tags/magictrucos.com/
+* https://opentrackers.org/magictrucos/
+
 ! jdr
 * map donjons : https://dungeonscrawl.com/
 
 ! pdf
-* signer pdf : https://www.docfly.com/sign-pdf
+* signer pdf : https://www.docfly.com/sign-pdf https://smallpdf.com/fr/signer-un-pdf
 
 ! Firefox Addons
 * uBlock Origin	https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/
@@ -13646,6 +13676,9 @@ Nutrition Optimale / méthode ROP Fabien Delcourt / fini les régimes Emmanuel F
 * DownloadHelper	https://addons.mozilla.org/en-US/firefox/addon/video-downloadhelper/
 
 ! magic
+* http://www.magic22.com/
+* https://magictricks.io/
+* https://www.rlsmagic.com
 * (stack) poker formulas https://www.denisbehr.de/pokerformulas/custom.php
 * (redford stack) https://patrickredford.com/redfordstacktoolbox/ pw:[see pw]
 * (copelandcoins) https://dave.copelandcoins.com/viajero pw:[see pw]
@@ -13656,7 +13689,38 @@ Nutrition Optimale / méthode ROP Fabien Delcourt / fini les régimes Emmanuel F
 * (copelandcoins) https://dave.copelandcoins.com/tresor-video
 
 ! Free stock
-* https://allthefreestock.com/</pre>
+* https://allthefreestock.com/
+
+! dev
+* https://devhints.io/ =&gt; cheatsheets
+* https://excalidraw.com/ =&gt; dessiner des schémas
+* https://learnxinyminutes.com/ =&gt; tutos
+* https://regex101.com/ =&gt; regex tryouts
+* https://jsoneditoronline.org/ =&gt; json editor
+* https://codesandbox.io/ =&gt; sandbox
+* https://bundlephobia.com/ =&gt; infos sur les packages
+* https://jubianchi.github.io/semver-check/#/ =&gt; contrôle de versions NPM
+* https://speed.cloudflare.com/ =&gt; tester connexion internet
+* https://unbug.github.io/codelf/ =&gt; popularité de nom de variable
+
+! free emails without phone
+* mail.com
+* protonmail.com
+* yandex.com
+* https://tutanota.com/
+* https://www.inbox.lv/
+* http://www.openmailbox.org/
+* http://mailnesia.com/
+* https://signup.gmx.com/
+* http://www.tempinbox.com/ (temporary email)
+* guerrillamail (temporary email)
+
+! jeux oldies
+* https://www.abandonware-france.org
+* https://www.myabandonware.com
+* https://classicreload.com
+* https://www.dosgames.com
+</pre>
 </div>
 <div created="20200210122011453" modified="20201201131801227" tags="fiche_lecture jeux" title="Order of Veiel">
 <pre>! Les tokens dans la boîte servent à quoi ?
@@ -14077,7 +14141,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20210201130437129" tags="" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20210301091239484" tags="" title="Perçou kid talk Perceval">
 <pre>* 	a kapoté &gt;&gt;	le grain de beauté
 * 	a kakopel &gt;&gt;	le tractopelle
 * 	akatola &gt;&gt;	chocolat
@@ -14101,6 +14165,9 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * 	a cahion ateur	&gt;&gt;	camion-aspirateur
 * 	akor a tchipitch	&gt;&gt;	encore un litchi
 * 	a to titure	&gt;&gt;	la confiture
+* 	katado à moi	&gt;&gt;	le sac-à-dos à moi
+* 	(ti)ticovèr	&gt;&gt;	haricot-verts
+* 	une échonge	&gt;&gt;	une éponge
 </pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
@@ -14284,7 +14351,7 @@ La question est : si à l'intérieur de nos yeux se trouve notre système nerveu
 Et si nos yeux servent à capter les particules de lumière, les photons, pour que notre cerveau puisse se fabriquer l'illusion du monde physique, à quoi sert la captation de la lumière par les trous noirs ?
 </pre>
 </div>
-<div created="20190130144059269" modified="20210208204831477" tags="core" title="pw">
+<div created="20190130144059269" modified="20210304132500298" tags="core" title="pw">
 <pre>pw passw
 
 
@@ -14306,7 +14373,7 @@ amazon =&gt; 1/14 amazon.s.lemoine@xoxy.net
 intra.ausy.fr =&gt; 11/17 || 1/20
 webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 7/20
 coffreo.com =&gt; samuel.lemoine@yahoo.com 8/18 
-facebook.com =&gt; 7/17
+facebook.com =&gt; 121
 yahoo.com =&gt; 6/20
 9gag =&gt; 9gag14.osef.osef@xoxy.net 12/14
 spamgourmet.net
@@ -14378,6 +14445,12 @@ ouicse.com =&gt; sa.le@ausy.fr 121
 UnaLIVEdesdeCASA.com =&gt; gkaps.osef.os@xn+121
 scribd.com =&gt; osef@grr.la+221
 ecotree.s.le@xn+1220
+mail.com =&gt; osefosef+221
+1lib.fr / zlib =&gt; 1lib.os.os@xn221 pwA
+etsy =&gt; etsy.s.le@xn713
+dasan.co	osef@grr.la osefosef 221
+airbnb.s.le@xn818
+maxi-debrid.com &gt; osef@grr.la 221
 ```
 
 
@@ -14453,8 +14526,52 @@ la connaissance (la certitude) est une sensation
 * Est-ce la meilleure option? 
 * Qu'est-ce qu'on peut faire dès maintenant?</pre>
 </div>
-<div created="20190529145620246" modified="20210210174728489" tags="hypnomachie core" title="Quotes, citations">
+<div created="20190529145620246" modified="20210312180118952" tags="hypnomachie core" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
+René Guénon - Le Règne de la Quantité et les Signes des Temps
+«  Nous avons parlé tout d’abord comme si les deux points de vue « bénéfique » et « maléfique » étaient en quelque sorte symétriques ; mais il est facile de comprendre qu’il n’en est rien, et que le second n’exprime que quelque chose d’instable et de transitoire, tandis que ce que représente le premier a seul un caractère permanent et définitif, de sorte que l’aspect « bénéfique » ne peut pas ne pas l’emporter finalement, alors que l’aspect « maléfique » s’évanouit entièrement, parce que, au fond, il n’était qu’une illusion inhérente à la « séparativité ». Seulement, à vrai dire, on ne peut plus alors parler proprement de « bénéfique », non plus que de « maléfique », en tant que ces deux termes sont essentiellement corrélatifs et marquent une opposition qui n’existe plus, car, comme toute opposition, elle appartient exclusivement à un certain domaine relatif et limité ; dès qu’elle est dépassée, il y a simplement ce qui est, et qui ne peut pas ne pas être, ni être autre que ce qu’il est ; et c’est ainsi que, si l’on veut aller jusqu’à la réalité de l’ordre le plus profond, on peut dire en toute rigueur que la « fin d’un monde » n’est jamais et ne peut jamais être autre chose que la fin d’une illusion.  »
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+''Le pari de Marc-Aurèle :
+&quot;Vivez une bonne vie. S’il y a des dieux et qu’ils sont justes, alors ils ne se soucieront pas de savoir à quel point vous avez été dévots, mais ils vous jugeront sur la base des vertus par lesquelles vous avez vécu.
+S’il y a des dieux mais qu’ils sont injustes, alors vous ne devriez pas les vénérer.
+S’il n’y a pas de dieux, alors vous ne serez pas là, mais vous aurez vécu une vie noble qui continuera d’exister dans la mémoire de ceux que vous avez aimés. Je n’ai pas peur.&quot; ''
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+&quot; Le jugement négatif de l’Eglise sur les associations maçonniques demeure donc inchangé, parce que leurs principes ont toujours été considérés comme inconciliables avec la doctrine de l’Eglise, et l’inscription à ces associations reste interdite par l’Eglise.&quot;
+(Congrégation pour la doctrine de foi)
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+&quot;On me médite pas, pour apprendre à se sentir bien. On médite pour apprendre ne plus souffrir de se sentir mal.&quot;
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Before you climb a ladder, you should make sure it’s leaning against the right wall. 
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+les mains oisives sont les jouets du démon
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Le bonheur ce n'est pas l'absence de malheur, mais la réconciliation avec le malheur  - c'est un acquiescement supérieur à la vie dans son entier, où l'on dit OUI même à la douleur.
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+Imaginez comme une possibilité que chacun des actes que vous choisissez d'accomplir, vous les choisissiez... pour toujours.
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
 &quot;L'Homme est la Nature prenant conscience d'elle-même.&quot;
 Elisée Reclus
 &lt;&lt;&lt;
@@ -14928,6 +15045,18 @@ Nomme l'oiseau à l'enfant pour la première fois et il ne le verra plus jamais.
 
 &lt;&lt;&lt;
 C'est l'histoire d'une cellule de la peau du talon et une cellule de la peau des aisselles qui se rencontrent et discutent. La cellule du talon dit: &quot;la vie est dûre, on se fait tout le temps agresser, il faut donc s'endurcir pour pouvoir l'endurer&quot;. La cellule des aisselles lui répond: &quot;pas du tout! La vie est moite et sombre. Il faut développer des capacités antifongiques naturelles pour éviter de pourrir&quot;. Ce sont deux &quot;vérités&quot; en apparence opposées, mais qui font sens du point de vue plus &quot;haut&quot; qu'est l'être humain. L'être humain est l'idée, la Vérité qui inclus les deux vérités en apparence contradictoires. Pour moi, c'est probablement la chose la plus intéressante à comprendre, c'est que tout modèle qui explique la réalité doit pouvoir y inclure toutes les vérités &quot;micro&quot; en apparence contradictoire qui y existent. Construire et déconstruire est une étape vers l'intégration de tout, menant normalement a la libération par le CHOIX. Car au final, si on se casse tant la tête pour chercher la &quot;vérité&quot;, c'est pour s'enchaîner a celle ci, pour pouvoir se délester du poids immense de la responsabilité qu'implique le fait d'être l'infini qui s'expérimente lui même, et qui donc, invente et crée tout de toute pièce : le bien et le mal, le sens de la vie, la &quot;vérité&quot;, la où en vrai, il n'y a que l'existence a l'état pur, sans aucun qualificatif. J'espère que ta vidéo aidera ceux qui la regarde a se libérer en choisissant en conscience leurs croyances, car c'est tout ce qu'on peut faire dans le monde relatif qui est le nôtre.
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+« 3 informations que je regarde au sein d’un CV : 
+- la localisation du candidat
+- le titre de son CV 
+- ses trois dernières expériences professionnelles
+En fonction de ces éléments, je poursuis ou non ma lecture »
+Christophe Guérin
+
 &lt;&lt;&lt;
 </pre>
 </div>
