--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -435,6 +435,8 @@ Error message and password prompt
 
 <li>Musculation méditative</li>
 
+<li>Narrative Disembodied</li>
+
 <li>Nico Pène misc</li>
 
 <li>Nutrition / ne pas grossir</li>
@@ -480,6 +482,8 @@ Error message and password prompt
 <li>Rhétorique</li>
 
 <li>S4ALL débattre</li>
+
+<li>Sankey says</li>
 
 <li>security</li>
 
@@ -9609,13 +9613,13 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20190108084833171" modified="20200210151117653" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20190108104722609" modified="20210205101210618" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/Recent</pre>
+<div created="20190108104722609" modified="20210415091850835" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20190108101211875" modified="20210402071043893" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20190108101211875" modified="20210415091847885" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20210413095453376" list="[[online services, addons &amp; resources]] Home" modified="20210413095517134" title="$:/StoryList">
+<div created="20210430202009257" list="[[online services, addons &amp; resources]] Home" modified="20210430202009257" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9666,11 +9670,11 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1696&quot;
+            &quot;text&quot;: &quot;1088&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;954&quot;
+            &quot;text&quot;: &quot;612&quot;
         }
     }
 }</pre>
@@ -9681,8 +9685,8 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20210313142548541" modified="20210324202119588" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20210413095515542" title="$:/temp/search">
-<pre>resources</pre>
+<div created="20190114084246125" modified="20210427145235803" title="$:/temp/search">
+<pre>resour</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -13924,6 +13928,21 @@ Pour les aspects scientifiques de mon propos, qui le fondent et le justifient, l
 C'est en me fondant sur un puissant socle scientifique, historique, symbolique, que j'ai pu concevoir cette approche de la musculation.
 </pre>
 </div>
+<div created="20210415091913461" modified="20210415091947701" tags="hypnomachie conscience" title="Narrative Disembodied">
+<pre>https://www.youtube.com/watch?v=jixwIFb0Kqw
+
+
+&lt;&lt;&lt;
+The narrative is a mechanism rooted in rationalization, my story, told by me to me. It in turn takes on a life of its own, informing my perceptions, and vice versa. Not acting like my narrative is subjective and fallible would be egotism and only leads me to being possessed by it.  After repeatedly experiencing the true nature of the narrative, as a mechanism of subjective rationalization, it is increasingly disembodied.
+
+    The egoic narrative of self creates highs and lows as the subjective story unfolds. It amplifies and distorts our emotions and perceptions as they take a hold of us and take on a life of their own. Outside factors never dictate our emotional response. When we are owned by emotions, it’s a reflection of our belief that we own them, due to the narrative. In embodying the narrative of self, we encounter manifestations including self-talk, extension of the half-life of emotions, and bodily tension. Intrinsically tied together the narrative of self doesn’t occur without the narrative of other.   
+
+     A person’s perception of other is tantamount to the egotistical projection of their subjective narrative.  Judgement, in turn acceptance, are fallacies because a person is informed and functions under a unique gold standard birthed amongst varying blends of cultures and religions, not a vacuum.  The pressure and critique a person puts on others, and themselves for that matter, arise from a uniquely refined gold standard, i.e. narrative. This leads to manifestations like prejudgment, defensiveness, social anxiety, and a distorted sense of worthiness. A person cannot feel shame, pride, inferior, or superior without their narrative imparting it. 
+
+     By experiencing the true nature of the narrative, as a mechanism of subjective rationalization, through a regular use of a mantra or a meditation practice one can increasingly disembody the narrative. And by doing so one will experience a shift in one’s emotion’s half-life, bodily tension, defensiveness, and one’s empathy.
+&lt;&lt;&lt;
+</pre>
+</div>
 <div created="20190301162423731" modified="20190301162450660" tags="fiche_lecture" title="Nico Pène misc">
 <pre>```
 méta-programme
@@ -13966,7 +13985,7 @@ Nutrition Optimale / méthode ROP Fabien Delcourt / fini les régimes Emmanuel F
 ```
 </pre>
 </div>
-<div created="20190322150105505" modified="20210413095949290" tags="improve core" title="online services, addons &amp; resources">
+<div created="20190322150105505" modified="20210430202022042" tags="improve core" title="online services, addons &amp; resources">
 <pre>! sub
 * https://www.sous-titres.eu/
 * https://www.opensubtitles.org/fr/search/subs
@@ -14052,6 +14071,7 @@ Nutrition Optimale / méthode ROP Fabien Delcourt / fini les régimes Emmanuel F
 * http://www.magic22.com/
 * https://magictricks.io/
 * https://www.rlsmagic.com
+* http://www.ranmagic.top/?cat=2 
 * (stack) poker formulas https://www.denisbehr.de/pokerformulas/custom.php
 * (redford stack) https://patrickredford.com/redfordstacktoolbox/ pw:[see pw]
 * (Michael Powers) http://www.mallofmagic.com/themoves.htm pw:[see pw]
@@ -14098,6 +14118,13 @@ Nutrition Optimale / méthode ROP Fabien Delcourt / fini les régimes Emmanuel F
 * https://www.myabandonware.com
 * https://classicreload.com
 * https://www.dosgames.com
+
+! download CCC with referer
+
+&lt;&lt;&lt;
+Invoke-WebRequest -Uri https://cc-live-events-2021.s3.amazonaws.com/04-april/kainoa-harbottle-living-room-lecture-april-2021.mp4 -Headers @{&quot;Referer&quot;=&quot;https://cc-live-events-2021.s3.amazonaws.com/04-april/ezs3js/player/flv/B9DF2C57-0205-59DD-5E961DA06B54AC25.html?cb=20210422045149&quot;}  -OutFile &quot;C:\kainoa-harbottle-living-room-lecture-april-2021.mp4&quot;
+&lt;&lt;&lt;
+
 </pre>
 </div>
 <div created="20200210122011453" modified="20201201131801227" tags="fiche_lecture jeux" title="Order of Veiel">
@@ -14519,7 +14546,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20210301091239484" tags="" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20210427141355260" tags="" title="Perçou kid talk Perceval">
 <pre>* 	a kapoté &gt;&gt;	le grain de beauté
 * 	a kakopel &gt;&gt;	le tractopelle
 * 	akatola &gt;&gt;	chocolat
@@ -14546,6 +14573,8 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * 	katado à moi	&gt;&gt;	le sac-à-dos à moi
 * 	(ti)ticovèr	&gt;&gt;	haricot-verts
 * 	une échonge	&gt;&gt;	une éponge
+* 	les papa-roulettes	&gt;&gt;	les patins à roulettes
+
 </pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
@@ -14720,7 +14749,7 @@ http://liens.howtommy.net/?Be1gEQ
 * Tout en respirant par le ventre, parlez sur un ton plus grave que d’habitude pour dire vos répliques. Les femmes devront s’exercer plus que les hommes, car en général leur voix est plus aiguë et ne porte pas loin. Donc, respiration « basse » et voix grave : vous projetterez votre voix au maximum.
 Faites de tels exercices régulièrement durant vos répétitions. Vous verrez : la différence sera remarquable! On vous entendra de loin… et sans micro.</pre>
 </div>
-<div created="20190130144059269" modified="20210412123052987" tags="core" title="pw">
+<div created="20190130144059269" modified="20210429163854328" tags="core" title="pw">
 <pre>pw passw
 
 
@@ -14824,6 +14853,8 @@ nantesmetropole.s.le@xn321
 PE esle0090 221
 PE Agate 321 long
 https://steve-s-school-76e5.thinkific.com/enrollments stevefaulkner.os.os@xn421
+AUSY mail.google.com sa.le@ausy.fr ausy4/21
+petitbambou.com	osef@grr.la 421
 ```
 
 
@@ -14900,12 +14931,22 @@ la connaissance (la certitude) est une sensation
 * Est-ce la meilleure option? 
 * Qu'est-ce qu'on peut faire dès maintenant?</pre>
 </div>
-<div created="20190529145620246" modified="20210413095506271" tags="hypnomachie core" title="Quotes, citations">
+<div created="20190529145620246" modified="20210416132357550" tags="hypnomachie core" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
 ''Le pari de Marc-Aurèle :
 &quot;Vivez une bonne vie. S’il y a des dieux et qu’ils sont justes, alors ils ne se soucieront pas de savoir à quel point vous avez été dévots, mais ils vous jugeront sur la base des vertus par lesquelles vous avez vécu.
 S’il y a des dieux mais qu’ils sont injustes, alors vous ne devriez pas les vénérer.
 S’il n’y a pas de dieux, alors vous ne serez pas là, mais vous aurez vécu une vie noble qui continuera d’exister dans la mémoire de ceux que vous avez aimés. Je n’ai pas peur.&quot; ''
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+if there is no way... then create one
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+When you can't DO what you LOVE, thrive to LOVE what you DO !
 &lt;&lt;&lt;
 
 
@@ -15552,6 +15593,34 @@ acquérir des arguments
 * bienveillance
 * absence de virulence
 * modestie épistémique
+</pre>
+</div>
+<div created="20210414172112579" modified="20210426171013349" tags="fiche_lecture" title="Sankey says">
+<pre>&lt;&lt;&lt;
+Do what you say you're going to do
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+2 types of rehearsal : strict rehearsal &amp; lax rehearsal
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Focus on your audience
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Magic word = YET
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+It's NOT 'Just Going To Happen!' 
+(you gotta go grab for it)
+&lt;&lt;&lt;
+
 </pre>
 </div>
 <div created="20190301161450649" modified="20190301161510859" tags="" title="security">
