--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9635,7 +9635,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20190108101211875" modified="20210415091847885" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20211019132005197" list="Home pw" modified="20211019132005197" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9686,11 +9686,11 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1696&quot;
+            &quot;text&quot;: &quot;1216&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;954&quot;
+            &quot;text&quot;: &quot;684&quot;
         }
     }
 }</pre>
@@ -9701,8 +9701,8 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20210313142548541" modified="20210715143200077" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20210728065107326" title="$:/temp/search">
-<pre>18401</pre>
+<div created="20190114084246125" modified="20211015093826717" title="$:/temp/search">
+<pre>kid</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -14112,7 +14112,7 @@ Pour les aspects scientifiques de mon propos, qui le fondent et le justifient, l
 C'est en me fondant sur un puissant socle scientifique, historique, symbolique, que j'ai pu concevoir cette approche de la musculation.
 </pre>
 </div>
-<div created="20190322150105505" modified="20210603080749584" tags="improve core" title="online services, addons &amp; resources">
+<div created="20190322150105505" modified="20210923201246404" tags="improve core" title="online services, addons &amp; resources">
 <pre>! sub
 * https://www.sous-titres.eu/
 * https://www.opensubtitles.org/fr/search/subs
@@ -14176,6 +14176,7 @@ C'est en me fondant sur un puissant socle scientifique, historique, symbolique, 
 
 ! pdf
 * signer pdf : https://www.docfly.com/sign-pdf https://smallpdf.com/fr/signer-un-pdf
+* fusionner pdf : https://smallpdf.com/fr/fusionner-pdf
 
 ! Firefox Addons
 * uBlock Origin	https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/
@@ -14679,7 +14680,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20210601100954672" tags="" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20211015094059809" tags="" title="Perçou kid talk Perceval">
 <pre>* 	a kapoté &gt;&gt;	le grain de beauté
 * 	a kakopel &gt;&gt;	le tractopelle
 * 	akatola &gt;&gt;	chocolat
@@ -14709,7 +14710,12 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * 	les papa-roulettes	&gt;&gt;	les patins à roulettes
 * 	les pata-glaces	&gt;&gt;	les patins à glace
 * 	moi chuis machelaqueen	&gt;&gt;	je suis Flash McQueen (Cars)
-</pre>
+* 	krateur, kratopelle	&gt;&gt;	tracteur, tractopelle
+* 	une kwature	&gt;&gt;	une couverture
+* 	gaum	&gt;&gt;	Guillaume
+* 	&quot;Papa, est-ce que t'as les grands bras pour attraper la Lune ?&quot;
+* 	&quot;moi ze vais tricher&quot;
+* 	&quot;elles z'ontaient&quot;</pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
 <pre>https://www.youtube.com/watch?v=jC3BsBPqDRA
@@ -14883,7 +14889,7 @@ http://liens.howtommy.net/?Be1gEQ
 * Tout en respirant par le ventre, parlez sur un ton plus grave que d’habitude pour dire vos répliques. Les femmes devront s’exercer plus que les hommes, car en général leur voix est plus aiguë et ne porte pas loin. Donc, respiration « basse » et voix grave : vous projetterez votre voix au maximum.
 Faites de tels exercices régulièrement durant vos répétitions. Vous verrez : la différence sera remarquable! On vous entendra de loin… et sans micro.</pre>
 </div>
-<div created="20190130144059269" modified="20210728131303910" tags="core" title="pw">
+<div created="20190130144059269" modified="20211019132052253" tags="core" title="pw">
 <pre>pw passw
 
 cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -14901,13 +14907,13 @@ webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 7/20
 cseausy.fr sa.le@ausyfr C521 double
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
-subscribe.free.fr/login =&gt; fbx18043933 521 alphanumonly
-youtube =&gt; osefgrr.la	5+19    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
+subscribe.free.fr/login =&gt; fbx18043933 521 alphanumonly / fbx27860631 bébé-terme (alphanumonly)
+youtube =&gt; osefgrr.la	5+21    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
 =&gt; osefosef@grr.la 2/20
 aliexpress =&gt; ali.s.lx.n 6/19
 impots.gouv.fr =&gt; 1200125072181 / i 5/17
-moncompteactivite.gouv.fr =&gt; 184014410977526 M12/18    cf https://intra.ausy.fr/publish/universite/Guide%20d'utilisation%20Consultant.pdf
-moncompteformation.gouv.fr =&gt; 1840144109775 M10/20
+moncompteactivite.gouv.fr =&gt; 184014410977526 M12/18 (obsolète, cf moncompteactivite)    cf https://intra.ausy.fr/publish/universite/Guide%20d'utilisation%20Consultant.pdf
+moncompteformation.gouv.fr =&gt; 1840144109775 M10/21
 gog.com =&gt; 3/17 gog13.o.osef@xoxy.net (aussi 12/18 gog.leno.osef@xoxy.net  mais inutile)
 cardmarket.com =&gt; 6/18 slemoine cardmarket.s.lemoine@xoxy.com
 paypal =&gt; 8/17 ebay.s.lemoine@xoxy.net
@@ -14925,8 +14931,8 @@ swdestinydb =&gt;
 starwarsdestinyfr.forumactif.com =&gt; 7/17
 steam =&gt; lenopgm 5/20
 humble bundle =&gt; 4/18 humble.osef.osef@xoxy.net
-assure.ameli.fr =&gt; 1840144109775 a621
-    =&gt; 2 88 06 49 007 351 08 / 14737567
+assure.ameli.fr =&gt; 1840144109775 a921
+    =&gt; 2 88 06 49 007 351 08 / ~~  &amp;'è&quot;è(-è
 CAF =&gt; 1469221 06062016
 IZY =&gt; http://dpparis.ozyclub.eu/?p=435 =&gt; 001368 / date de naissance JJMMAAAA
 ants.gouv.fr =&gt; G 2/18
@@ -14991,13 +14997,17 @@ airbnb.s.le@xn818
 maxi-debrid.com &gt; osef@grr.la 221
 nantesmetropole.s.le@xn321
 PE esle0090 221
-PE Agate a521
+PE Agate a921 long
 https://steve-s-school-76e5.thinkific.com/enrollments stevefaulkner.os.os@xn421
 petitbambou.com	osef@grr.la 421
 ranmagic.top =&gt; osef@grr.la 5/21
 nexusmods.com =&gt; osefnexusmods n621*2 osefosef[à)mail.com
 paybyphone.fr =&gt; paybyphone.s.le@xn 721
 gameontabletop =&gt; sa.le@yc 721
+laposte.fr =&gt; sa.le@yc 821
+erdnasemagicstore.io erdnasemagicstore.s.le@xnE821
+sncf/ter =&gt; sa.le@yc 821
+discord =&gt; sa.le@yc921
 ```
 
 
